--- a/web/coinsim/frontend/src/src/app/views/trading/trading.component.html
+++ b/web/coinsim/frontend/src/src/app/views/trading/trading.component.html
@@ -4,149 +4,79 @@
       <div class="col">
         <h5>Wallet</h5>
         <ul class="wallet-list">
-          <li class="wallet-item" (click)="createSellObject($event.target)">
-            <img src="assets/img/crypto-icons/btc.png" alt="btc-icon">
+          <li *ngFor="let item of walletModel.currencies" class="wallet-item" (click)="createSellObject($event.target, item)">
+            <img src="assets/img/crypto-icons/{{item.currency | lowercase}}.png" alt="btc-icon">
             <div>
-              <span class="title">Botcoins</span>
-              <span class="sum">0.0004</span>
+              <span class="title">{{item.currency}}</span>
+              <span class="sum">{{item.amount}}</span>
             </div>
           </li>
         </ul>
       </div>
       <div class="col-7">
-        <h4>Trading Area</h4>
-        <div class="trading-area">
-          <ul class="wallet-trading-list">
-            <li *ngFor="let item of tradingModel.sell" class="trading-item">
-              <div class="container-name">
-                  <img src="assets/img/crypto-icons/{{item.SHORT | lowercase}}.png" alt="btc-icon">
-                  <input id="{{item.SHORT}}WalletInput" (keyup)="onInputChange($event, item, 'Wallet')" type="number" min="0" max="{{item.BALANCE}}" step="0.001" value="{{item.BALANCE}}">
-                  <span class="title">{{item.SHORT}}</span>
-                </div>
-              <div class="container-slider">
-                  <ion-range-slider id="{{item.SHORT}}WalletSlider"
-                  type="single"
-                  step="0.0001"
-                  min="0"
-                  max="{{item.BALANCE}}"
-                  from="{{item.BALANCE}}"
-                  (onChange)="updateSlider($event.from, item.SHORT, 'Wallet')"
-                  ></ion-range-slider>
-              </div>
-              </li>
-          </ul>
-          <div class="trading-icon-container"><span>
-              <i class="fa fa-exchange" aria-hidden="true"></i>
-          </span></div>
-          <ul class="bank-trading-list">
-              <li *ngFor="let item of tradingModel.buy" class="trading-item">
+        <div class="container">
+          <div class="row">
+            <h3>Trading Area</h3>
+            <div class="trading-area col-12">
+              <ul class="wallet-trading-list">
+                <li *ngFor="let item of tradingModel.sell" class="trading-item">
                   <div class="container-name">
-                    <span class="title">{{item.SHORT}}</span>
-                    <input id="{{item.SHORT}}BankInput" (keyup)="onInputChange($event, item, 'Bank')" type="number" min="0" max="{{item.BALANCE}}" step="0.001" value="{{item.BALANCE}}">
-                    <img src="assets/img/crypto-icons/{{item.SHORT | lowercase}}.png" alt="btc-icon">
-                    </div>
-                  <div class="container-slider">
-                      <!-- <ion-range-slider id="{{item.SHORT}}BankSlider"
-                      type="single"
-                      step="0.0001"
-                      min="0"
-                      max="{{item.BALANCE}}"
-                      from="{{item.BALANCE}}"
-                      (onChange)="updateSlider($event.from, item.SHORT, 'Bank')"
-                      ></ion-range-slider> -->
+                    <img src="assets/img/crypto-icons/{{item.sym | lowercase}}.png" alt="btc-icon">
+                    <input id="{{item.sym}}WalletInput" (keyup)="onInputChange($event, item, 'Wallet')" type="number" min="0" max="{{item.balance}}"
+                      step="0.001" value="{{item.balance}}">
+                    <span class="title">{{item.sym}}</span>
                   </div>
-          </ul>
+                  <div class="container-slider">
+                    <ion-range-slider id="{{item.sym}}WalletSlider" type="single" step="0.0001" min="0" max="{{item.balance}}" from="{{item.balance}}"
+                      (onChange)="updateSlider($event.from, item.sym, 'Wallet')"></ion-range-slider>
+                  </div>
+                </li>
+              </ul>
+              <div class="trading-icon-container"><span>
+                    <i class="fa fa-exchange" aria-hidden="true"></i>
+                </span></div>
+              <ul class="bank-trading-list">
+                <li *ngFor="let item of tradingModel.buy" class="trading-item">
+                  <div class="container-name">
+                    <span class="title">{{item.sym}}</span>
+                    <input id="{{item.sym}}BankInput" (keyup)="onInputChange($event, item, 'Bank')" type="number" min="0" max="{{item.balance}}"
+                    step="0.001" value="0" disabled>
+                    <img src="assets/img/crypto-icons/{{item.sym | lowercase}}.png" alt="{{item.sym | lowercase}}-icon">
+                  </div>
+                  <div class="container-slider">
+                    <ion-range-slider id="{{item.SHORT}}BankSlider"
+                            type="single"
+                            step="1"
+                            min="0"
+                            max="100"
+                            from="100"
+                            postfix= "%"
+                            (onChange)="updateSlider($event.from, item.SHORT, 'Bank')"
+                            ></ion-range-slider>
+                  </div>
+              </ul>
+            </div>
+          </div>
+          <div class="row justify-content-md-center">
+            <div class="col-auto button-container">
+              <button type="button" class="btn btn-light btn-lg" (click)="reset()">Reset</button>
+              <button type="button" class="btn btn-success btn-lg">Buy</button>
+            </div>
+          </div>
         </div>
       </div>
       <div class="col">
         <h5>Bank</h5>
         <ul class="bank-list">
-          <li class="bank-item" (click)="createBuyObject($event.target)">
-              <img src="assets/img/crypto-icons/eth.png" alt="btc-icon">
-              <div>
-                <span class="title">Botcoins</span>
-              </div>
-            </li>
-            <li class="bank-item" (click)="createBuyObject($event)">
-                <img src="assets/img/crypto-icons/eth.png" alt="btc-icon">
-                <div>
-                  <span class="title">Botcoins</span>
-                </div>
-              </li>
-              <li class="bank-item" (click)="createBuyObject($event)">
-                  <img src="assets/img/crypto-icons/eth.png" alt="btc-icon">
-                  <div>
-                    <span class="title">Botcoins</span>
-                  </div>
-                </li>
-                <li class="bank-item" (click)="createBuyObject($event)">
-                    <img src="assets/img/crypto-icons/eth.png" alt="btc-icon">
-                    <div>
-                      <span class="title">Botcoins</span>
-                    </div>
-                  </li>
-                  <li class="bank-item" (click)="createBuyObject($event)">
-                      <img src="assets/img/crypto-icons/eth.png" alt="btc-icon">
-                      <div>
-                        <span class="title">Botcoins</span>
-                      </div>
-                    </li>
-                    <li class="bank-item" (click)="createBuyObject($event)">
-                        <img src="assets/img/crypto-icons/eth.png" alt="btc-icon">
-                        <div>
-                          <span class="title">Botcoins</span>
-                        </div>
-                      </li>
-                      <li class="bank-item" (click)="createBuyObject($event)">
-                          <img src="assets/img/crypto-icons/eth.png" alt="btc-icon">
-                          <div>
-                            <span class="title">Botcoins</span>
-                          </div>
-                        </li>
-                        <li class="bank-item" (click)="createBuyObject($event)">
-                            <img src="assets/img/crypto-icons/eth.png" alt="btc-icon">
-                            <div>
-                              <span class="title">Botcoins</span>
-                            </div>
-                          </li>
-                          <li class="bank-item" (click)="createBuyObject($event)">
-                              <img src="assets/img/crypto-icons/eth.png" alt="btc-icon">
-                              <div>
-                                <span class="title">Botcoins</span>
-                              </div>
-                            </li>
-                            <li class="bank-item" (click)="createBuyObject($event)">
-                                <img src="assets/img/crypto-icons/eth.png" alt="btc-icon">
-                                <div>
-                                  <span class="title">Botcoins</span>
-                                </div>
-                              </li>
-                              <li class="bank-item" (click)="createBuyObject($event)">
-                                  <img src="assets/img/crypto-icons/eth.png" alt="btc-icon">
-                                  <div>
-                                    <span class="title">Botcoins</span>
-                                  </div>
-                                </li>
-                                <li class="bank-item" (click)="createBuyObject($event)">
-                                    <img src="assets/img/crypto-icons/eth.png" alt="btc-icon">
-                                    <div>
-                                      <span class="title">Botcoins</span>
-                                    </div>
-                                  </li>
-                                  <li class="bank-item" (click)="createBuyObject($event)">
-                                      <img src="assets/img/crypto-icons/eth.png" alt="btc-icon">
-                                      <div>
-                                        <span class="title">Botcoins</span>
-                                      </div>
-                                    </li>
+          <li *ngFor="let item of bankModel.currencies" class="bank-item" (click)="createBuyObject($event.target, item)">
+            <img src="assets/img/crypto-icons/{{item.sym | lowercase}}.png" alt="{{item.sym | lowercase}}-icon">
+            <div>
+              <span class="title">{{item.name}}</span>
+            </div>
+          </li>
         </ul>
-      </div>
-    </div>
-    <div class="row justify-content-md-center">
-      <div class="col-auto">
-        <button type="button" class="btn btn-light btn-lg" (click)="reset()">Reset</button>
-        <button type="button" class="btn btn-success btn-lg">Buy</button>
       </div>
     </div>
   </div>
 </div>
+
