--- a/web/coinsim/frontend/src/src/app/views/trading/trading.component.scss
+++ b/web/coinsim/frontend/src/src/app/views/trading/trading.component.scss
@@ -6,11 +6,18 @@
 {
   list-style-type: none;
   margin: 0;
-  padding: 0 0.5rem;
+  padding: 0 .5rem;
+  overflow: auto;
+  min-height: 95px;
+}
+
+.wallet-list,
+.bank-list {
+  max-height: 700px;
   overflow: auto;
 }
 
-h4,
+h3,
 h5 {
   width: 100%;
   text-align: center;
@@ -19,12 +26,12 @@ h5 {
 
 .wallet-item,
 .bank-item {
-  padding: 0.5rem;
-  margin: .3rem 0.1rem;
+  padding: .5rem;
+  margin: .3rem .1rem;
   border-radius: 3px;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   box-shadow: 0 1px #FFFFFF inset, 0 1px 3px rgba(34, 25, 25, 0.4);  
   img {
     width: 22px;
@@ -38,7 +45,7 @@ h5 {
     }
   
     .sum {
-      font-size: 0.7rem;
+      font-size: .7rem;
       color: #536c79;
     }
   }
@@ -58,9 +65,10 @@ h5 {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
+
   ul {
     width: 45%;
-    padding: 0.2rem;
+    padding: .2rem;
   }
 
   .trading-icon-container {
@@ -87,12 +95,15 @@ h5 {
       width: 22px;
     }
 
-    input {
+    input,
+    input:disabled {
       border: 0;
       text-align: center;
       font-size: 20px;
       color: #3e515b;
-      width: auto;
+      width: 100px;
+      background-color: #FFF;
+  
     }
     
     .title {
@@ -103,5 +114,11 @@ h5 {
   .container-slider {
     width: 100%;
     padding: .5rem 1rem 0 1rem;
+  }
+}
+
+.button-container {
+  button {
+    margin: 1rem .5rem;
   }
 }
