--- a/web/coinsim/frontend/src/src/app/views/market-detail/detail.component.scss
+++ b/web/coinsim/frontend/src/src/app/views/market-detail/detail.component.scss
@@ -13,7 +13,7 @@
 }
 
 .pct {
-    
+
     color: white;
     border-radius: 5px;
     padding: 1px 6px;
@@ -27,3 +27,24 @@
 .green {
     background:  #6db56d
 }
+
+.description {
+  ::ng-deep {
+    .tab-title {
+      font-weight: bold;
+      margin-bottom: 11px;
+    }
+
+    a {
+      color: #8cc63f;
+    }
+
+    .btn-primary {
+      background: #8cc63f;
+      border: 1px solid #8cc63f;
+      cursor: pointer;
+      color: #fff;
+    }
+  }
+}
+
